# tailtriage

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_NOTES.md  IMPLEMENTATION_PLAN.md  PLANS.md  README.md  SECURITY.md  SPEC.md  VALIDATION.md  deny.toml
.github/: pull_request_template.md
demos/: README.md
demos/blocking_service/: Cargo.toml
demos/blocking_service/fixtures/: after-analysis.json  before-after-comparison.json  before-analysis.json  sample-analysis.json
demos/blocking_service/src/: main.rs
demos/collector_stress/: Cargo.toml
demos/collector_stress/src/: main.rs
demos/demo_support/: Cargo.toml
demos/demo_support/src/: lib.rs
demos/downstream_service/: Cargo.toml
demos/downstream_service/fixtures/: after-analysis.json  before-after-comparison.json  before-analysis.json  sample-analysis.json
demos/downstream_service/src/: main.rs
demos/executor_pressure_service/: Cargo.toml
demos/executor_pressure_service/fixtures/: after-analysis.json  before-after-comparison.json  before-analysis.json  sample-analysis.json
demos/executor_pressure_service/src/: main.rs
demos/mixed_contention_service/: Cargo.toml
demos/mixed_contention_service/fixtures/: baseline-analysis.json  before-after-comparison.json  mitigated-analysis.json
demos/mixed_contention_service/src/: main.rs
demos/queue_service/: Cargo.toml
demos/queue_service/fixtures/: after-analysis.json  before-analysis.json  sample-analysis.json
demos/queue_service/src/: main.rs
demos/runtime_cost/: Cargo.toml
demos/runtime_cost/src/: main.rs
docs/: README.md  architecture.md  changelog.md  collector-limits.md  diagnostic-validation.md  diagnostics.md  getting-started-demo.md  github-repo-ops.md  launch-checklist-issue-v0.1.md  mental-model.md  mvp-audit-2026-03-19.md  mvp-audit-2026-03-20.md  operations.md  public-readiness-checklist.md  release-gates-v0.1.md  runtime-cost.md  user-guide.md
examples/: analyzer-config.toml
scripts/: _demo_runner.py  check_demo_fixture_drift.py  ci_detect_published_version_change.py  demo_tool.py  diagnostic_benchmark.py  generate_diagnostic_scorecard.py  measure_collector_limits.py  measure_collector_stress.py  (+30 more)
tailscope-cli/: Cargo.toml
tailscope-cli/src/: analyze.rs  main.rs
tailscope-cli/tests/: analyzer_fixtures.rs  boundary_thresholds.rs  demo_smoke_fixtures.rs  report_schema_contract.rs
tailscope-cli/tests/fixtures/: downstream_stage.json  executor_pressure.json  mixed_queue_vs_blocking.json  queue_saturation.json
tailscope-macros/: Cargo.toml
tailscope-macros/src/: lib.rs
tailscope-macros/tests/: instrument_request.rs
tailscope-tokio/: Cargo.toml
tailscope-tokio/src/: lib.rs
tailtriage/: Cargo.toml  README.md
tailtriage-analyzer/: Cargo.toml  README.md
tailtriage-analyzer/examples/: analyzer-config.toml
tailtriage-analyzer/src/: attribution.rs  confidence.rs  evidence.rs  lib.rs  partial_evidence.rs  render.rs  route.rs  scoring.rs  stage_attribution.rs  temporal.rs  tests.rs
tailtriage-analyzer/src/analyze/: mod.rs  scoring.rs  temporal.rs  tests.rs
tailtriage-analyzer/src/options/: descriptors.rs  mod.rs  overrides.rs  registry.rs  toml.rs
tailtriage-analyzer/tests/: analyzer_fixtures.rs  boundary_thresholds.rs  end_to_end_capture_analysis.rs  public_api_contract.rs  report_schema_contract.rs  timing_contract.rs
tailtriage-analyzer/tests/fixtures/: blocking_pressure.json  downstream_stage.json  executor_pressure.json  mixed_blocking_vs_downstream.json  mixed_queue_vs_blocking.json  queue_saturation.json
tailtriage-axum/: Cargo.toml  README.md
tailtriage-axum/examples/: axum_core_manual.rs  axum_minimal.rs  axum_service_adoption.rs
tailtriage-axum/src/: lib.rs
tailtriage-axum/tests/: axum_adapter.rs
tailtriage-cli/: Cargo.toml  README.md
tailtriage-cli/src/: analyze.rs  artifact.rs  lib.rs  main.rs
tailtriage-cli/src/analyze/: confidence.rs  evidence.rs  mod.rs  render.rs  route.rs  scoring.rs  temporal.rs  tests.rs
tailtriage-cli/tests/: analyzer_config.rs  analyzer_fixtures.rs  boundary_thresholds.rs  cli_boundary.rs  cli_json_output.rs  demo_smoke_fixtures.rs  end_to_end_capture_analysis.rs  json_parity.rs  report_schema_contract.rs
tailtriage-cli/tests/fixtures/: blocking_pressure.json  executor_pressure.json  insufficient_evidence.json  mixed_blocking_vs_downstream.json  mixed_queue_vs_blocking.json  queue_saturation.json
tailtriage-controller/: Cargo.toml  README.md
tailtriage-controller/examples/: controller_minimal.rs  controller_toml_startup.rs
tailtriage-controller/src/: lib.rs
tailtriage-core/: Cargo.toml  README.md
tailtriage-core/src/: collector.rs  config.rs  controller.rs  events.rs  lib.rs  request_context.rs  request_ids.rs  retention.rs  run_builder.rs  sink.rs  tests.rs  time.rs  timers.rs  validation.rs
tailtriage-macros/: Cargo.toml
tailtriage-macros/src/: lib.rs
tailtriage-macros/tests/: instrument_request.rs
tailtriage-tokio/: Cargo.toml  README.md
tailtriage-tokio/examples/: axum_minimal.rs  axum_service_adoption.rs  live_recorder.rs  mini_service_integration.rs  minimal_checkout.rs  tracing_spans.jsonl
tailtriage-tokio/src/: axum.rs  lib.rs
tailtriage-tokio/tests/: axum_adapter.rs  tracing_fixture_smoke.rs
tailtriage-tracing/: Cargo.toml  README.md
tailtriage-tracing/examples/: completed_span_jsonl_export.rs  completed_span_jsonl_import.rs  import_jsonl.rs  live_recorder.rs  live_session_snapshot.rs  live_session_to_run.rs  tokio_session_to_run.rs  tracing_spans.jsonl
tailtriage-tracing/src/: convention.rs  error.rs  jsonl.rs  lib.rs  live.rs  recorder.rs  tokio.rs  types.rs
tailtriage-tracing/tests/: equivalence.rs  live_api_defaults.rs  live_api_surface.rs  live_defaults_api.rs  live_recorder_defaults.rs  public_api_live_defaults.rs  tokio_session.rs  tracing_examples.rs  tracing_fixture_smoke.rs
tailtriage-tracing/tests/fixtures/: tailtriage-span-v1.jsonl
tailtriage-tracing/tests/support/: equivalence_harness.rs  mod.rs
tailtriage/src/: lib.rs
tailtriage/tests/: tracing_facade.rs
(+108 files in other folders)
