[workspace]
members = [
  "tailtriage",
  "tailtriage-core",
  "tailtriage-controller",
  "tailtriage-tokio",
  "tailtriage-axum",
  "tailtriage-cli",
  "demos/demo_support",
  "demos/queue_service",
  "demos/blocking_service",
  "demos/executor_pressure_service",
  "demos/downstream_service",
  "demos/mixed_contention_service",
  "demos/cold_start_burst_service",
  "demos/db_pool_saturation_service",
  "demos/shared_state_lock_service",
  "demos/retry_storm_service",
  "demos/runtime_cost",
  "demos/collector_stress",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.2"
repository = "https://github.com/SG-devel/tailtriage"

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
tailtriage = { version = "0.1.2", path = "tailtriage" }
tailtriage-core = { version = "0.1.2", path = "tailtriage-core" }
tailtriage-controller = { version = "0.1.2", path = "tailtriage-controller" }
tailtriage-tokio = { version = "0.1.2", path = "tailtriage-tokio" }
tailtriage-axum = { version = "0.1.2", path = "tailtriage-axum" }
demo-support = { version = "0.1.2", path = "demos/demo_support" }
