[workspace]
members = [
  "tailtriage",
  "tailtriage-core",
  "tailtriage-controller",
  "tailtriage-tokio",
  "tailtriage-axum",
  "tailtriage-analyzer",
  "tailtriage-cli",
  "tailtriage-tracing",
  "demos/demo_support",
  "demos/queue_service",
  "demos/blocking_service",
  "demos/executor_pressure_service",
  "demos/downstream_service",
  "demos/mixed_contention_service",
  "demos/cold_start_burst_service",
  "demos/db_pool_saturation_service",
  "demos/shared_state_lock_service",
  "demos/retry_storm_service",
  "demos/runtime_cost",
  "demos/collector_stress",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.0"
repository = "https://github.com/SG-devel/tailtriage"

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
tailtriage = { version = "0.2.0", path = "tailtriage" }
tailtriage-core = { version = "0.2.0", path = "tailtriage-core" }
tailtriage-analyzer = { version = "0.2.0", path = "tailtriage-analyzer" }
tailtriage-controller = { version = "0.2.0", path = "tailtriage-controller" }
tailtriage-tokio = { version = "0.2.0", path = "tailtriage-tokio" }
tailtriage-axum = { version = "0.2.0", path = "tailtriage-axum" }
tailtriage-tracing = { version = "0.2.0", path = "tailtriage-tracing" }
demo-support = { version = "0.2.0", path = "demos/demo_support" }
serde = { version = "1", features = ["derive"] }
