[package]
name = "tailscope-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tailscope"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tailscope-core = { path = "../tailscope-core" }

[lints]
workspace = true
