[package]
name = "tailscope-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tailscope-core = { path = "../tailscope-core" }
tailscope-macros = { path = "../tailscope-macros" }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"

[lints]
workspace = true
