[package]
name = "tailtriage-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Heuristic triage analyzer and report rendering for tailtriage runs"
documentation = "https://docs.rs/tailtriage-analyzer"
readme = "README.md"
keywords = ["tokio", "latency", "diagnostics", "triage", "analysis"]
categories = ["development-tools::profiling", "development-tools::debugging"]
include = ["Cargo.toml", "README.md", "LICENSE", "src/**"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tailtriage-core.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "macros", "time"] }
