[package]
name = "tailtriage-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Axum adapter for tailtriage request-boundary triage wiring"
repository = "https://github.com/SG-devel/tailtriage"
documentation = "https://docs.rs/tailtriage-axum"
readme = "README.md"
keywords = ["axum", "tokio", "latency", "instrumentation", "triage"]
categories = ["asynchronous", "development-tools::profiling", "development-tools::debugging"]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "matched-path", "tokio"] }
tailtriage-core = { version = "0.1.0", path = "../tailtriage-core" }

[lints]
workspace = true

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
