[package]
name = "tailtriage-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum adapter for tailtriage request-boundary triage wiring"
documentation = "https://docs.rs/tailtriage-axum"
readme = "README.md"
keywords = ["axum", "tokio", "latency", "instrumentation", "triage"]
categories = ["asynchronous", "development-tools::profiling", "development-tools::debugging"]
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "src/**",
  "examples/**",
]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "matched-path", "tokio"] }
tailtriage-core.workspace = true

[lints]
workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
