[package]
name = "tailtriage-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for tailtriage artifact loading, diagnosis, and report generation"
repository = "https://github.com/SG-devel/tailtriage"
documentation = "https://docs.rs/tailtriage-cli"
readme = "README.md"
keywords = ["tokio", "latency", "cli", "diagnostics", "triage"]
categories = ["command-line-utilities", "development-tools::profiling", "development-tools::debugging"]

[[bin]]
name = "tailtriage"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tailtriage-core = { version = "0.1.0", path = "../tailtriage-core" }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.23.0"
# Needed by async integration tests in tests/end_to_end_capture_analysis.rs.
tokio = { version = "1.48.0", features = ["macros", "rt", "time"] }
