[package]
name = "tailtriage-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for tailtriage artifact loading, diagnosis, and report generation"
documentation = "https://docs.rs/tailtriage-cli"
readme = "README.md"
keywords = ["tokio", "latency", "cli", "diagnostics", "triage"]
categories = ["command-line-utilities", "development-tools::profiling", "development-tools::debugging"]
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "src/**",
]

[[bin]]
name = "tailtriage"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tailtriage-core.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.23.0"
# Needed by async integration tests in tests/end_to_end_capture_analysis.rs.
tokio = { version = "1.48.0", features = ["macros", "rt", "time"] }
