[package]
name = "tailtriage-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Long-lived control-layer scaffolding for repeated bounded tailtriage activations"
documentation = "https://docs.rs/tailtriage-controller"
readme = "README.md"
keywords = ["tokio", "latency", "controller", "capture", "triage"]
categories = ["asynchronous", "development-tools::profiling", "development-tools::debugging"]
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "src/**",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
tailtriage-core.workspace = true
toml = "0.8"

[lints]
workspace = true
