[package]
name = "tailtriage-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configurable control layer for repeated bounded capture windows in long-lived services"
documentation = "https://docs.rs/tailtriage-controller"
readme = "README.md"
keywords = ["tokio", "latency", "controller", "capture", "triage"]
categories = ["asynchronous", "development-tools::profiling", "development-tools::debugging"]
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "src/**",
  "examples/**",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
tailtriage-core.workspace = true
tailtriage-tokio.workspace = true
tokio = { version = "1", features = ["rt", "time"] }
toml = "0.8"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
