[package]
name = "tailtriage-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data model and analyzer for Tokio tail-latency triage with evidence-ranked suspects"
repository = "https://github.com/SG-devel/tailtriage"
documentation = "https://docs.rs/tailtriage-core"
readme = "../README.md"
keywords = ["tokio", "latency", "diagnostics", "performance", "triage"]
categories = ["asynchronous", "development-tools::profiling", "development-tools::debugging"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true

[dev-dependencies]
futures-executor = "0.3"
