[package]
name = "tailtriage-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Framework-agnostic request instrumentation and run schema for tailtriage triage artifacts"
documentation = "https://docs.rs/tailtriage-core"
readme = "README.md"
keywords = ["tokio", "latency", "diagnostics", "performance", "triage"]
categories = ["asynchronous", "development-tools::profiling", "development-tools::debugging"]
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "src/**",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
futures-executor = "0.3"
