[package]
name = "tailtriage-macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[lints]
workspace = true

[dev-dependencies]
serde_json = "1"
tailtriage-core = { path = "../tailtriage-core" }
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
