[package]
name = "tailtriage-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for low-friction Tokio request instrumentation in tail-latency triage"
repository = "https://github.com/tailtriage/tailtriage"
documentation = "https://docs.rs/tailtriage-macros"
readme = "../README.md"
keywords = ["tokio", "latency", "proc-macro", "instrumentation", "triage"]
categories = ["asynchronous", "development-tools::profiling", "development-tools::debugging"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[lints]
workspace = true

[dev-dependencies]
serde_json = "1"
tailtriage-core = { version = "0.1.0", path = "../tailtriage-core" }
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
