[package]
name = "tailtriage-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tokio runtime sampling and request instrumentation helpers for tail-latency triage"
repository = "https://github.com/SG-devel/tailtriage"
documentation = "https://docs.rs/tailtriage-tokio"
readme = "README.md"
keywords = ["tokio", "latency", "instrumentation", "async", "triage"]
categories = ["asynchronous", "development-tools::profiling", "development-tools::debugging"]

[dependencies]
tailtriage-core = { version = "0.1.0", path = "../tailtriage-core" }
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tracing = "0.1"

[lints]
workspace = true

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
