[package]
name = "tailtriage-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokio runtime sampling integration for tailtriage run artifacts"
documentation = "https://docs.rs/tailtriage-tokio"
readme = "README.md"
keywords = ["tokio", "latency", "instrumentation", "async", "triage"]
categories = ["asynchronous", "development-tools::profiling", "development-tools::debugging"]
include = [
  "Cargo.toml",
  "README.md",
  "src/**",
]

[dependencies]
tailtriage-core.workspace = true
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[lints]
workspace = true
