[package]
name = "tailtriage-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tracing-shaped intake types for importing spans into tailtriage_core::Run"
documentation = "https://docs.rs/tailtriage-tracing"
readme = "README.md"
keywords = ["tokio", "tracing", "latency", "diagnostics", "triage"]
categories = ["asynchronous", "development-tools::debugging", "development-tools::profiling"]
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "src/**",
  "examples/**",
]

[dependencies]
tailtriage-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
tailtriage-analyzer.workspace = true
tokio = { version = "1", features = ["macros", "rt", "time"] }
tempfile = "3"
