[package]
name = "blocking-service-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tailtriage-core.workspace = true
demo-support.workspace = true

[lints]
workspace = true
