[package]
name = "collector_stress"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1"
tailtriage-core.workspace = true
tailtriage-tokio.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
