[package]
name = "demo-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1"
tailtriage-core.workspace = true
tailtriage-tracing.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }

[lints]
workspace = true
