[package]
name = "demo-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1"
serde_json = "1"
tailtriage-core.workspace = true
tailtriage-tracing = { workspace = true, features = ["tokio"] }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }

[lints]
workspace = true
