[package]
name = "executor-pressure-service-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tailtriage-core = { path = "../../tailtriage-core" }
demo-support = { path = "../demo_support" }
